environments/common/observability/jaeger/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: observability
spec:
  hosts:
    - "jaeger.${HOST}"
  gateways:
    - istio-ingress/public-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jaeger-query
            port:
              number: 16686
